--- a/style.css
+++ b/style.css
@@ -1,35 +1,101 @@
 *{
     margin: 0;
-}
-
-#wrapper{
-    width: 100vw;
-    height: 100vh;
-    background-image: url("assets/pinkbg.jpg");
-}
-
-.nav-bar{
-    background-color: black;
-    padding: 10px;
-}
-
-.ul1 {
-    text-align: center;
-    list-style-type: none;
-    margin-right: 10px;
-}
-
-.ul1 li{
-    display: inline;
-    margin-left: 20px;
-}
-
-.ul2 a{
+    padding: 0;
     text-decoration: none;
+    list-style: none;
+    box-sizing: border-box;
+}
+
+nav{
+    background: black;
+    height: 80px;
+    width: 100%;
+}
+
+label.logo{
     color: white;
-    font-size: large;
-    padding: 10px;
+    font-size: 25px;
+    line-height: 80px;
+    padding: 0 20px;
+    font-family: MyName;
+}
+
+nav ul{
+    float: right;
+    margin-right: 350px;
+}
+
+nav ul li{
+    display: inline-block;
+    line-height: 120px;
+    margin: 0 45px;
     font-family: NavFont;
+}
+
+nav ul li a{
+    color: white;
+    font-size: 17px;
+}
+
+a.active, a:hover{
+    text-decoration: underline;
+    transition: .5s;
+}
+
+.checkbtn{
+    color: red;
+    float: right;
+    line-height: 95px;
+    margin-right: 40px;
+    display: none;
+}
+
+.menu{
+    width: 30px;
+}
+
+#check{
+    display: none;
+}
+
+@media (max-width: 952px){
+    label.logo{
+        font-size: 30px;
+        padding-left: 20px;
+    }
+
+    nav ul li a{
+        font-size: 16px;
+        /* color: black; */
+    }
+}
+
+@media (max-width: 858px){
+    .checkbtn{
+        display: block;
+    }
+    ul{
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        background: black;
+        top: 80px;
+        left: -100%;
+        text-align: center;
+        transition: all .5s;
+    }
+    nav ul li{
+        display: block;
+        margin: 50px 0;
+        line-height: 30px;
+    }
+    nav ul li a{
+        font-size: 20px;
+    }
+    #check:checked ~ ul{
+        left: 0;
+
+    }
 }
 
 @font-face {
@@ -41,31 +107,3 @@
     font-family: "MyName";
     src: url("fonts/BungeeInline-Regular.ttf");
 }
-
-.myname{
-    text-align: left;
-    position: relative;
-    padding: 5px;
-    color: white; 
-    font-family: MyName;
-    font-size: larger;
-}
-
-.ul2{
-    text-align: right;
-    list-style: none;
-    padding: 10px;
-}
-
-.ul2 li{
-    display: inline;
-}
-
-.ul2 a{
-    padding: 10px;
-}
-
-.ul2 img{
-    width: 30px;
-}
-
