--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@
     box-sizing: border-box;
 }
 
+body{
+    color: black;
+}
+
 nav{
     background: black;
     height: 80px;
@@ -96,6 +100,14 @@ a.active, a:hover{
         left: 0;
 
     }
+}
+
+section{
+    
+    background: url("assets/bitmojicpy.jpg") no-repeat;
+    background-size: cover;
+    height: calc(100vh - 80px);
+    /* opacity: 0.5; */
 }
 
 @font-face {
