--- a/css/style.css
+++ b/css/style.css
@@ -1,50 +1,50 @@
+@import 'utilities.css';
+
 *{
     margin: 0;
     padding: 0;
     text-decoration: none;
-    list-style: none;
     box-sizing: border-box;
 }
 
-body{
-    color: black;
+.right a img{
+    height: 35px;
+    padding: 5px;
 }
 
-nav{
+header{
     background: black;
-    height: 80px;
-    width: 100%;
+    height: 500px;
 }
 
-label.logo{
+.container{
+    max-width: calc(100vw - 20px);
+    padding: 0 15px;
+    margin: 0 auto;
+}
+
+header nav .left a{
     color: white;
-    font-size: 25px;
-    line-height: 80px;
-    padding: 0 20px;
-    font-family: MyName;
-}
-
-nav ul{
-    float: right;
-    margin-right: 350px;
-}
-
-nav ul li{
-    display: inline-block;
-    line-height: 120px;
-    margin: 0 45px;
-    font-family: NavFont;
-}
-
-nav ul li a{
-    color: white;
-    font-size: 17px;
+    font-family: NavFont,sans-serif;
+    margin-right: 5rem;
     transition: all .5s ease;
 }
 
-a.active, a:hover{
+header nav .left .logo h1{
+    color: white;
+    font-family: MyName;
+    font-size: 25px;
+}
+
+header nav .logo{
+    margin-right: 17rem;
+}
+
+header nav .left a:hover{
     color: pink;
 }
+
+
 
 .checkbtn{
     color: red;
