--- a/css/style.css
+++ b/css/style.css
@@ -1,127 +1,136 @@
-@import 'utilities.css';
+@import "utilities.css";
 
-*{
-    margin: 0;
-    padding: 0;
-    text-decoration: none;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  box-sizing: border-box;
 }
 
-.right a img{
-    height: 35px;
-    padding: 5px;
-}
-
-header{
-    background: black;
-    height: 70px;
-}
-
-.container{
-    max-width: calc(100vw - 20px);
-    padding: 0 15px;
-    margin: 0 auto;
-}
-
-header nav .left a{
-    color: white;
-    font-family: NavFont,sans-serif;
-    margin-right: 5rem;
-    transition: all .5s ease;
-}
-
-header nav .left .logo h1{
-    color: white;
-    font-family: MyName;
-    font-size: 25px;
-}
-
-header nav .logo{
-    margin-right: 17rem;
-}
-
-header nav .left a:hover{
-    color: pink;
-}
-
-.hero{
-    background: url("../assets/bitmojicpy.jpg") no-repeat;
+body{
+    background-image: url("../assets/bitmojicpy.jpg");
+    background-repeat: no-repeat;
     background-size: cover;
-    height: calc(100vh - 70px);
+    background-attachment: fixed;
 }
 
-.hero h1{
-    font-size: 170px;
-    font-family: 'Reenie Beanie';
-    margin-left: 20rem;
-    font-weight: 550;
+.right a img {
+  height: 35px;
+  padding: 5px;
 }
 
-
-.checkbtn{
-    color: red;
-    float: right;
-    line-height: 95px;
-    margin-right: 40px;
-    display: none;
+header {
+  background: black;
+  height: 70px;
 }
 
-.menu{
-    width: 30px;
+.container {
+  max-width: calc(100vw - 20px);
+  padding: 0 15px;
+  margin: 0 auto;
 }
 
-#check{
-    display: none;
+header nav .left a {
+  color: white;
+  font-family: NavFont, sans-serif;
+  margin-right: 5rem;
+  transition: all 0.5s ease;
 }
 
-@media (max-width: 952px){
-    label.logo{
-        font-size: 30px;
-        padding-left: 20px;
-    }
-
-    nav ul li a{
-        font-size: 16px;
-        /* color: black; */
-    }
+header nav .left .logo h1 {
+  color: white;
+  font-family: MyName;
+  font-size: 25px;
 }
 
-@media (max-width: 858px){
-    .checkbtn{
-        display: block;
-    }
-    ul{
-        position: fixed;
-        width: 100%;
-        height: 100vh;
-        background: black;
-        top: 80px;
-        left: -100%;
-        text-align: center;
-        transition: all .5s;
-    }
-    nav ul li{
-        display: block;
-        margin: 50px 0;
-        line-height: 30px;
-    }
-    nav ul li a{
-        font-size: 20px;
-    }
-    #check:checked ~ ul{
-        left: 0;
-
-    }
+header nav .logo {
+  margin-right: 17rem;
 }
 
+header nav .left a:hover {
+  color: pink;
+}
 
+.hero {
+  /* background: url("../assets/bitmojicpy.jpg") no-repeat;
+  background-size: cover; */
+  height: calc(100vh - 70px);
+}
+
+.hero h1 {
+  font-size: 170px;
+  font-family: "Reenie Beanie";
+  margin-left: 20rem;
+  font-weight: 550;
+}
+
+/* .who{
+    background: url("../assets/bitmojicpy.jpg") no-repeat;
+  background-size: cover;
+  height: calc(100vh - 70px);
+} */
+
+.checkbtn {
+  color: red;
+  float: right;
+  line-height: 95px;
+  margin-right: 40px;
+  display: none;
+}
+
+.menu {
+  width: 30px;
+}
+
+#check {
+  display: none;
+}
+
+@media (max-width: 952px) {
+  label.logo {
+    font-size: 30px;
+    padding-left: 20px;
+  }
+
+  nav ul li a {
+    font-size: 16px;
+    /* color: black; */
+  }
+}
+
+@media (max-width: 858px) {
+  .checkbtn {
+    display: block;
+  }
+  ul {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background: black;
+    top: 80px;
+    left: -100%;
+    text-align: center;
+    transition: all 0.5s;
+  }
+  nav ul li {
+    display: block;
+    margin: 50px 0;
+    line-height: 30px;
+  }
+  nav ul li a {
+    font-size: 20px;
+  }
+  #check:checked ~ ul {
+    left: 0;
+  }
+}
 
 @font-face {
-    font-family: "NavFont";
-    src: url("../fonts/PodkovaVFBeta.ttf");
+  font-family: "NavFont";
+  src: url("../fonts/PodkovaVFBeta.ttf");
 }
 
 @font-face {
-    font-family: "MyName";
-    src: url("../fonts/BungeeInline-Regular.ttf");
+  font-family: "MyName";
+  src: url("../fonts/BungeeInline-Regular.ttf");
 }
