almost there, not responsive yet

--- a/style.css
+++ b/style.css
@@ -10,6 +10,18 @@
   src: url("../fonts/BungeeInline-Regular.ttf");
 }
 
+.flex{
+  display: flex;
+}
+
+.items-center{
+  align-items: center;
+}
+
+.justify-between{
+  justify-content: space-between;
+}
+
 html{
   scroll-behavior: smooth;
 }
